# i3status-rust

./: Cargo.toml
files/icons/: awesome.toml  awesome5.toml  awesome6.toml  material.toml
src/: blocks.rs  config.rs  errors.rs  icons.rs  main.rs  scheduler.rs  signals.rs  themes.rs  util.rs  widgets.rs  wrappers.rs
src/blocks/: apt.rs  backlight.rs  base_block.rs  battery.rs  bluetooth.rs  cpu.rs  custom.rs  custom_dbus.rs  disk_space.rs  dnf.rs  docker.rs  external_ip.rs  focused_window.rs  github.rs  hueshift.rs  ibus.rs  kdeconnect.rs  keyboard_layout.rs  load.rs  maildir.rs  memory.rs  music.rs  net.rs  networkmanager.rs  notify.rs  notmuch.rs  nvidia_gpu.rs  pacman.rs  pomodoro.rs  prelude.rs  rofication.rs  sound.rs  speedtest.rs  taskwarrior.rs  temperature.rs  template.rs  time.rs  toggle.rs  uptime.rs  watson.rs  (+2 more)
src/protocol/: i3bar_event.rs  mod.rs
